    - (Unified) Spoiling randomization that randomizes what spoils (but preserves the things that are spoiled into)
    - (Unified) The science packs to be used in technologies
    - (Unified) Fluids that are used for the operation of machines
    - WIP randomizer panel with ability to see what's needed to get anything in the game
---------------------------------------------------------------------------------------------------
Version: 0.4.11
Date: 2026.01.16
  Features:
    - Ability to reset or set property values with overrides post-randomization
    - Option for color randomization
  Changes:
    - The default seed is now displayed as 0 (but 23 is added to the seed in the code because 23 is my favorite number)
  Bugfixes:
    - Spent fuel result now updated in item-new to prevent softlocks
    - (Hopefully) stopped hidden technologies from becoming prerequisites to other technologies (causing softlocks)
---------------------------------------------------------------------------------------------------
Version: 0.4.10
Date: 2026.01.03
  Bugfixes:
    - Critical spelling mistake causing frequent startup error
---------------------------------------------------------------------------------------------------
Version: 0.4.9
Date: 2026.1.3
  Bugfixes:
    - Fixed path.lua errors
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 2026.01.02
  Changes:
    - Added minimally invasive checks that prevent 1x1 mining drill area on less-than-ultimate chaos
    - Solar panel weight is not randomized, to prevent potential space platform power softlocks
    - Made some tooltips hopefully clearer
    - Resistances and some weapon damage types are never randomized below ultimate chaos as a hotfix to asteroid resistance softlocks encountered by players
  Bugfixes:
    - Double checked inventory existence in teleport hotkey
    - Higher minimum day length post-randomization