@@ -1,11 +1,9 @@
 CURRENTLY ON:
- * System for configuring handlers better, flag which ones I needed to make assumptions for
-    * This is motivated by the need for seeing which randomizations are vanilla-specific
-    * Test that the blacklist I set up is working
- * Spoofs for spoilage handler
-    * Spoofs for fluid operation too!
+ * Mining fluid required randomizer?
  * Make unified things more user friendly (final pass)
  * Test for hidden items/recipes in logic (I think it doesn't do tests now)
+ * Add full tests for unified handlers
+ * More safeguards
 
  * (30min) Refactoring lookups (then push commit about refactoring)
  * (a few hours?) Handlers, I.B.1, probably will take at least this week, entity randomization as a bonus
