@@ -1,0 +1,25 @@
+A list of handlers and info about them.
+
+# entity-operation-fluid
+
+# recipe-category
+
+Not ready for release
+
+# recipe-ingredients
+
+Not ready for release
+
+# recipe-tech-unlocks
+
+# spoiling
+
+Assumes vanilla space age, has manual blacklist for iron bacteria and copper bacteria.
+
+# starting-planet
+
+Not ready for release
+
+# tech-prereqs
+
+# tech-science-packs
